# mcsm

./: .clang-format  .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE  Makefile  README.md
.gitold/: COMMIT_EDITMSG  config  index  packed-refs
.gitold/logs/: HEAD
.gitold/logs/refs/heads/: beta  main
.gitold/logs/refs/remotes/origin/: HEAD  beta  main
.gitold/objects/pack/: pack-049e01f434d7ab36d9183d4866854e386af13308.idx  pack-049e01f434d7ab36d9183d4866854e386af13308.pack
.gitold/refs/heads/: beta
.gitold/refs/remotes/origin/: main
assets/: resources.rc
backward/: backward.cpp
cmake/Modules/: Findlibgit2.cmake
include/mcsm/: init.h
include/mcsm/command/: command_manager.h
include/mcsm/command/base/: args_description.h  command.h  subcommand.h
include/mcsm/command/server/: clear_server_command.h  generate_server_command.h  start_server_command.h  view_server_command.h  view_server_type_command.h
include/mcsm/command/server/group/: group_command.h
include/mcsm/command/server/jvm/: jvm_command.h  jvm_option_edit_command.h  jvm_option_generator_command.h  jvm_option_search_command.h  jvm_test_command.h
include/mcsm/command/util/: help_command.h  version_command.h
include/mcsm/data/: configurable.h  global_option.h  option.h
include/mcsm/data/options/: custom_server_option.h  general_option.h  general_property.h  jvm_option.h  multi_server_config_generator.h  multi_server_config_loader.h  multi_server_option.h  running_sessions_option.h  server_config_generator.h  server_config_loader.h  server_data_option.h  server_group_generator.h  server_group_loader.h  server_option.h  server_process.h  server_starter.h
include/mcsm/data/options/general/: advanced_json_errors_property.h  color_download_progress_bar_property.h  screen_bin_path_property.h  skip_version_check_property.h  sponge_api_search_recommended_versions_property.h  test1.h  test2.h
include/mcsm/data/options/modded/: fabric_server_data_option.h  fabric_server_option.h
include/mcsm/http/: download.h  get.h  holder.h
include/mcsm/jvm/: java_detection.h  java_detector.h  java_install.h  jvm_option.h
include/mcsm/plugin/bukkit/: bukkit_plugin.h
include/mcsm/plugin/sponge/: sponge_plugin.h
include/mcsm/server/: server.h  server_generator.h  server_group_manager.h  server_process.h  server_registry.h  server_type.h
include/mcsm/server/type/: compiled.h  custom_server.h  downloadable.h
include/mcsm/server/type/base/: bukkit_server.h  vanilla_server.h
include/mcsm/server/type/bukkit/: downloadable.h  folia_server.h  paper_server.h  purpur_server.h
include/mcsm/server/type/modded/: fabric_server.h  sponge_server.h
include/mcsm/server/type/proxy/: velocity_server.h
include/mcsm/util/: algorithm_utils.h  string_utils.h
include/mcsm/util/cli/: arg_parser.h  ask_input.h  cli_utils.h  console.h  logging.h  result.h  screen_session.h  segfault_handler.h  signal_handler.h  text_color.h
include/mcsm/util/git/: clone_utils.h
include/mcsm/util/mc/: mc_utils.h
include/mcsm/util/os/: os_detection.h
src/: command.h  command_manager.cpp  command_manager.h  help_command.cpp  help_command.h  init.cpp  main.cpp  option.cpp  option.h  string_utils.cpp  test_command.cpp  test_command.h  version_command.cpp  version_command.h  version_getter.cpp  version_getter.h
src/command/: command.cpp  command.h  command_manager.cpp  command_manager.h  generate_server_command.cpp  generate_server_command.h  get_server_command.cpp  get_server_command.h  help_command.cpp  help_command.h  jvm_option_generator_command.cpp  jvm_option_generator_command.h  test_command.cpp  test_command.h  version_command.cpp  version_command.h
src/command/base/: command.cpp  command.h
src/command/server/: clear_server_command.cpp  generate_server_command.cpp  generate_server_command.h  get_server_command.cpp  get_server_command.h  start_server_command.cpp  view_server_command.cpp  view_server_type_command.cpp
src/command/server/group/: group_command.cpp
src/command/server/jvm/: jvm_command.cpp  jvm_option_edit_command.cpp  jvm_option_generator_command.cpp  jvm_option_generator_command.h  jvm_option_search_command.cpp  jvm_option_search_command.h  jvm_test_command.cpp  jvm_test_command.h
src/command/util/: help_command.cpp  help_command.h  version_command.cpp  version_command.h
src/data/: configurable.h  global_option.cpp  global_option.h  option.cpp  option.h
src/data/options/: custom_server_option.cpp  general_option.cpp  general_property.cpp  jvm_option.cpp  jvm_option.h  multi_server_option.cpp  running_sessions_option.cpp  server_config_generator.cpp  server_config_loader.cpp  server_data_option.cpp  server_group_generator.cpp  server_group_loader.cpp  server_option.cpp  server_process.cpp  server_starter.cpp
src/data/options/modded/: fabric_server_data_option.cpp  fabric_server_option.cpp
src/http/: curl_manager.cpp  curl_manager.h  download.cpp  download.h  get.cpp  get.h  holder.cpp
src/jvm/: java_detection.cpp  java_detection.h  java_detector.cpp  jvm_option.cpp
src/os/: os_detection.cpp  os_detection.h
src/plugin/bukkit/: bukkit_plugin.cpp
src/server/: server.cpp  server.h  server_generator.cpp  server_group_manager.cpp  server_process.cpp  server_registry.cpp  server_type.cpp  server_type.h
src/server/type/: custom_server.cpp  downloadable.h
src/server/type/base/: bukkit_server.cpp  bukkit_server.h  vanilla_server.cpp  vanilla_server.h
src/server/type/bukkit/: folia_server.cpp  paper_server.cpp  paper_server.h  purpur_server.cpp
src/server/type/modded/: fabric_server.cpp  sponge_server.cpp
src/server/type/proxy/: velocity_server.cpp
src/util/: algorithm_utils.cpp  ask_input.cpp  ask_input.h  cli_utils.cpp  cli_utils.h  curl_stuff.h  string_utils.cpp  string_utils.h
src/util/cli/: ask_input.cpp  cli_utils.cpp  console.cpp  logging.cpp  result.cpp  screen_session.cpp  segfault_handler.cpp  signal_handler.cpp
src/util/git/: clone_utils.cpp
src/util/mc/: mc_utils.cpp  mc_utils.h
src/util/os/: os_detection.cpp  os_detection.h
(+25 files in other folders)
